--- a/barangay-system-main/chatbot-main/css/faq.css
+++ b/barangay-system-main/chatbot-main/css/faq.css
@@ -145,12 +145,15 @@ nav.scrolled {
     background-color: #f1f1f1;
 }
 .footer {
-    width: 100%;
-    padding: 20px;
-    background-color: #0056b3;
-    color: white;
-    margin-top: 0px;
-  }
+  width: 100%;
+  padding: 20px;
+  background-color: #0056b3;
+  color: white;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+}
+
   
   .footer-content {
     display: flex;
