--- a/barangay-system-main/chatbot-main/css/chatbot.css
+++ b/barangay-system-main/chatbot-main/css/chatbot.css
@@ -109,3 +109,21 @@
     margin: 0 8px;
     object-fit: cover;
 }
+
+  @media (max-width: 320px) {
+    iframe {
+      width: 90vw !important;
+      height: 60vh !important;
+      right: 5vw !important;
+      bottom: 10px !important;
+    }
+  }
+    @media (max-width: 320px) {
+    #chatbot-frame {
+      display: none !important;
+    }
+  }
+
+  * {
+  outline: 1px solid red;
+}
